<resources>
    <string name="app_name">Training Demo App</string>
    <string name="today">Do Today</string>
    <string name="dummy1">Lorem ipsum dolor sit amet, consetetur\nsadipscing elitr, sed diam nonumy</string>
    <string name="get_started">Get Started</string>
    <string name="reset_password">Reset password</string>
    <string name="enterpassword_msg">Enter your registered email below\nto receive password reset instructions</string>
    <string name="update_password">update Password</string>
    <string name="please_update_your_password">Please update your password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="update">Update</string>
    <string name="update_progress">Edit Progress</string>
    <string name="session_timeout">Session Expired</string>
    <string name="login">LOGIN</string>
    <string name="enter_email_address">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_text">Log In</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="inavlid_email">Email is Invalid</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string-array name="heading">
        <item>DO TODAY</item>
        <item>PLAN</item>

        <item>TRACK IT</item>
    </string-array>
    <string-array name="detail">
        <item>Check here every day for tasks that will help you grow and maintain your business.</item>
        <item>Start here and plan your goals for the year.</item>
        <item>Keep tabs on how far you’ve come and how close you are to your goals! Sales are updated each week.</item>

    </string-array>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="powered_by">Powered by</string>
    <string name="setting">Setting</string>
    <string name="welcome">welcome</string>
    <string name="john">John</string>
    <string name="dotoday">Do Today</string>
    <string name="sayandshare"><![CDATA[Say & Share]]></string>
    <string name="traing">Training</string>
    <string name="plan">Plan</string>
    <string name="events">Events</string>
    <string name="events_detail">Events Detail</string>
    <string name="track_it">Track It</string>
    <string name="activities_tips"><![CDATA[Activities & Tips]]></string>
    <string name="by_tom_ferry">By Tom ferry</string>
    <string name="quatstext">\"you can make money or you can make excuses which do you prefer\"</string>
    <string name="imagedes">imagedes</string>
    <string name="android">android</string>
    <string name="version">1</string>
    <string name="pleaseenteremail">Please Enter Email</string>
    <string name="ok">OK</string>
    <string name="pleaseentervailedemail">Enter a valid email</string>
    <string name="pleaseenterpassword">Please Enter Password</string>
    <string name="please_enter_current_password">Please Enter Current Password</string>
    <string name="checkinternet">Check your Internet Connection</string>
    <string name="msg_accountnotactive">Your account has not been activated</string>
    <string name="pleaseenterconfirmpassword">Please Enter Confirm Password</string>
    <string name="shouldbe_pwd">Password should have minimum %1$s  characters</string>
    <string name="passwordnotmatch">New password and confirm password do not match.</string>
    <string name="password_match">New password and old password should not match.</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="faq_s">faq’s</string>
    <string name="are_you_sure_">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="first_30_days">First 30 Days</string>
    <string name="email">Email</string>
    <string name="coach">Coach</string>
    <string name="adambrown">Adam Brown</string>
    <string name="manager">Manager</string>
    <string name="bryan_edwards">Bryan Edwards</string>
    <string name="office">Office</string>
    <string name="officedummy">Midtown</string>
    <string name="phonenumber">Phone number</string>
    <string name="_122_0200_0886">+122 0200 0886</string>
    <string name="email_address">Email address</string>
    <string name="dummayemail">helpdesk@cbtulsa.com</string>
    <string name="address">Address</string>
    <string name="dummyaddress">8909 S Yale Avenue Tulsa, OK 74137</string>
    <string name="current_password">Current password</string>
    <string name="your_password_has_been_n_successfully_changed">Your password has been \n successfully changed.</string>
    <string name="edit">Edit</string>
    <string name="current_year_goals">Current Year Goals</string>
    <string name="total_listings">Total Listings</string>
    <string name="active_listings_per_month">Active Listings per Month</string>
    <string name="closed_units">Closed Units</string>
    <string name="closed_volume">Closed Volume</string>
    <string name="gross_commission">Gross Commission</string>
    <string name="previous_year_actuals">Previous Year Actuals</string>
    <string name="business">Business</string>
    <string name="businessplanning">Business Planning</string>
    <string name="planning">Planning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="no_plan_assigned">No Plan Assigned</string>
    <string name="goals_update_successfully">Goals have been successfully updated</string>
    <string name="profile_updated_successfully">Your profile has been successfully updated</string>
    <string name="basic_url">Url To Open</string>
    <string name="activity_name">Activity Name</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="rcVersion">RC 1</string>
    <string name="help_desk_email">helpdesk@cbtulsa.com</string>
    <string name="dummy_location_coordinates">36.03358658457076, -95.91957769101606</string>
    <string name="invalid_name">Please enter a valid Name</string>
    <string name="actual">Actual:</string>
    <string name="goal">Goal:</string>
    <string name="platform">Platform</string>
    <string name="device">Device</string>
    <string name="os">OS</string>
    <string name="app_version">App Version</string>
    <string name="battery_level">Battery Level</string>
    <string name="network_type">Network Type</string>
    <string name="level_up_support">LevelUp Support</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="set_goal">Set Goals</string>
    <string name="video_desc">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one</string>
    <string name="add_to_extra">Add to extra</string>
    <string name="added">Added</string>
    <string name="task_list">Task List</string>
    <string name="description">Description</string>
    <string name="from">from</string>
    <string name="wifi">WiFi</string>
    <string name="mobile">Mobile</string>
    <string name="socials">Social Media</string>
    <string name="letters">Letters</string>
    <string name="scripts">Scripts</string>
    <string name="share">Share</string>
    <string name="app_not_installed">Application Not Installed</string>
    <string name="permmision_accept_request">Please ACCEPT the permission in order to share</string>
    <string name="plan_days">%2$s (DAY %1$s)</string>
    <string name="starting_at">Plan starting on %1$s</string>
    <string name="start_plan_on">Plan Starting on </string>
    <string name="no_task_added_in_the_list">No Task added in the list</string>
    <string name="extras">Extras</string>
    <string name="sure_want_to_delete_task">Are you sure you want to delete?</string>
    <string name="delete">delete</string>
    <string name="basic">Basic</string>
    <string name="expansion">Expansion</string>
    <string name="extra">Extra</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="dd_MM_yyyy">dd-MM-yyyy</string>
    <string name="detail_letter">Detail Letter</string>
    <string name="letter">Letter</string>
    <string name="full_screen">Full Screen</string>
    <string name="_12m_ago">12m ago</string>
    <string name="good_morning_coldwell_banker_agents_the_meeting_has_be">Good morning Coldwell Banker Agents! The meeting has be</string>
    <string name="no_task">No task available</string>
    <string name="no_application_installed">No Application Installed to handle this</string>
    <string name="error_random">Some Error occurred. Please try again</string>
    <string name="no_training_available">No Training Available</string>
    <string name="no_notifications_available">No Notification Available</string>
    <string name="no_tips_available">No Tips Available</string>
    <string name="empty_letter_scripts">No %1$s Available</string>
    <string name="no_activities_available">No Activity Available</string>
    <string name="no_social_media_available">No Social Media Available</string>
    <string name="edit_progress">Edit Progress</string>
    <string name="got_it">Got it</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="frame">Frame</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="external_storage">Storage Permission</string>
    <string name="external_storage_msg">Need storage permission to save photos</string>
    <string name="no_frames_available">No Frames Available</string>
    <string name="coaching_plans">Coaching Plans</string>
    <string name="add_plan">Add Plan</string>
    <string name="master_plan">Master Plan</string>
    <string name="expansion_plans">Expansion Plans</string>
    <string name="no_plan_selected">No Plan Selected</string>
    <string name="plans_updated_successfully">Your plans have been successfully updated</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="videos">Videos</string>
    <string name="no_matching_result">No matching results found</string>
    <string name="december_2022">December 2022</string>
    <string name="sample_date">24</string>
    <string name="sample_weekday">Mon</string>
    <string name="sample_project_name">Project Daily Stand-Up</string>
    <string name="sample_project_time">10:00 AM</string>
    <string name="sample_project_time_1">10:30 AM</string>
    <string name="sample_locations">2 Locations</string>
    <string name="tv_events_location">Event Locations</string>
    <string name="about_this_event">About This Event</string>
</resources>